log/build_2024-11-20_21-15-50/locomotion/stdout_stderr.log
running egg_info
writing ../../build/locomotion/locomotion.egg-info/PKG-INFO
writing dependency_links to ../../build/locomotion/locomotion.egg-info/dependency_links.txt
writing entry points to ../../build/locomotion/locomotion.egg-info/entry_points.txt
writing requirements to ../../build/locomotion/locomotion.egg-info/requires.txt
writing top-level names to ../../build/locomotion/locomotion.egg-info/top_level.txt
reading manifest file '../../build/locomotion/locomotion.egg-info/SOURCES.txt'
writing manifest file '../../build/locomotion/locomotion.egg-info/SOURCES.txt'
running build
running build_py
copying locomotion/locomotion.py -> /home/robot/human_ws/build/locomotion/build/lib/locomotion
running install
running install_lib
copying /home/robot/human_ws/build/locomotion/build/lib/locomotion/locomotion.py -> /home/robot/human_ws/install/locomotion/lib/python3.10/site-packages/locomotion
byte-compiling /home/robot/human_ws/install/locomotion/lib/python3.10/site-packages/locomotion/locomotion.py to locomotion.cpython-310.pyc
  File "/home/robot/human_ws/install/locomotion/lib/python3.10/site-packages/locomotion/locomotion.py", line 67
    if mean < 0.8
                 ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/robot/human_ws/install/locomotion/lib/python3.10/site-packages/locomotion-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/locomotion/locomotion.egg-info to /home/robot/human_ws/install/locomotion/lib/python3.10/site-packages/locomotion-0.0.0-py3.10.egg-info
running install_scripts
Installing locomotion script to /home/robot/human_ws/install/locomotion/lib/locomotion
writing list of installed files to '/home/robot/human_ws/build/locomotion/install.log'
